- Fix multiselection spacing - Change component names

--- a/src/components/ElementProperties/styles.module.less
+++ b/src/components/ElementProperties/styles.module.less
@@ -35,6 +35,10 @@
 
       .content {
         padding: 10px;
+
+        .multiSelection {
+          padding-top: 10px;
+        }
       }
 
       :global .ant-collapse {
